# genai-hackathon-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  better-llm.txt  docker-compose.yml  main.py  pyproject.toml
.kilocode/rules/: code-quality-rules.md
docs/: agents.md  api.md  architecture.md  deployment.md  development.md
scripts/: check-setup.py  install-dependencies.sh  run-tests.sh  setup-firebase.py  setup.sh  test-setup.sh
src/: __init__.py  main.py  test_integration.py
src/ai_services/: __init__.py  agent_communication.py  agent_factory.py  agent_orchestrator.py  agent_testing.py  exceptions.py  function_tools.py  gemini_agents.py  maps_function_tools.py  model_config.py  prompt_templates.py  session_manager.py  workflow_engine.py
src/api/: __init__.py  dependencies.py  health.py  middleware.py
src/auth/: __init__.py  dependencies.py  firebase_auth.py  routes.py  schemas.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
src/database/: __init__.py  firestore_client.py  models.py
src/maps_services/: __init__.py  directions_service.py  exceptions.py  geocoding_service.py  maps_client.py  places_service.py  routes.py  schemas.py
src/trip_planner/: __init__.py  routes.py  schemas.py  services.py  tasks.py
src/utils/: __init__.py
tests/: conftest.py  utils.py
tests/fixtures/: ai_responses.py  maps_data.py  trip_data.py  user_data.py
tests/integration/: test_api.py  test_auth_flow.py  test_multi_agent_workflow.py  test_trip_planning_api.py
tests/performance/: test_agent_performance.py  test_api_performance.py  test_concurrent_users.py
tests/unit/: test_agent_orchestrator.py  test_auth.py  test_background_tasks.py  test_config.py  test_database_models.py  test_directions_service.py  test_exceptions.py  test_firestore.py  test_function_tools.py  test_gemini_agents.py  test_geocoding_service.py  test_logging.py  test_maps_client.py  test_model_config.py  test_places_service.py  test_security.py  test_session_manager.py  test_trip_planner.py  test_trip_schemas.py  test_user_management.py
